[package]
name = "kimyo"
version = "0.1.0"
edition = "2024"

# [lib]
# crate-type = ["cdylib"]

[dependencies]
mlua = { version = "0.9", features = ["lua54", "vendored","async"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
urlencoding = "2.1"
