[package]
name = "kimyo"
version = "0.1.0"
edition = "2024"

[dependencies]
mlua = { version = "0.11", features = [
  "lua54",
  "vendored",
  "async",
  "send",
  "userdata-wrappers",
] }
tokio = { version = "1", features = ["full"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
urlencoding = "2.1"
clap = { version = "4.5", features = ["derive"] }
